# mkdocs-zip-bundle-plugin

./: .gitignore  404.html  CHANGELOG.md  CNAME  LICENSE  Makefile  README.md  index.html  mkdocs.yml  placeholder-plugin.yaml  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yaml
assets/javascripts/: placeholder-combined.js
configuration/: index.html
docs/: configuration.md  index.md
javascripts/: zip-bundle.js
mkdocs_zip_bundle/: __init__.py  plugin.py
mkdocs_zip_bundle/assets/: zip-bundle.css
search/: search_index.json
tests/: test_integration.py  test_plugin.py
