[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-zip-bundle-plugin"
version = "0.2.0"
description = "Bundle code blocks into downloadable ZIP or raw files — for MkDocs/Material and Zensical."
readme = "README.md"
authors = [{ name = "Daemonless" }]
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["mkdocs", "material", "zensical", "zip", "bundle", "placeholders", "interactive"]
dependencies = [
    "mkdocs>=1.4.0",
    "beautifulsoup4>=4.11.0"
]

[project.urls]
Homepage = "https://github.com/daemonless/mkdocs-zip-bundle-plugin"
Repository = "https://github.com/daemonless/mkdocs-zip-bundle-plugin"
"Bug Tracker" = "https://github.com/daemonless/mkdocs-zip-bundle-plugin/issues"

[project.entry-points."mkdocs.plugins"]
zip-bundle = "mkdocs_zip_bundle.plugin:ZipBundlePlugin"

[tool.setuptools.packages.find]
include = ["mkdocs_zip_bundle*"]

[tool.setuptools.package-data]
mkdocs_zip_bundle = ["assets/*"]
